--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-remark": "^1.7.28",
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.12.0",
+    "react-icons": "^3.7.0"
   }
 }
