--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-remark": "^1.7.28",
+    "mdbreact": "^4.17.0",
     "node-sass": "^4.12.0",
+    "react-hamburger-menu": "^1.1.1",
     "react-icons": "^3.7.0"
   }
 }
