--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "gatsby": "^1.9.153",
     "gatsby-link": "^1.6.34",
@@ -18,6 +19,7 @@
     "gatsby-transformer-remark": "^1.7.28",
     "mdbreact": "^4.17.0",
     "node-sass": "^4.12.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-hamburger-menu": "^1.1.1",
     "react-icons": "^3.7.0"
   }
