--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^4.12.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-hamburger-menu": "^1.1.1",
-    "react-icons": "^3.7.0"
+    "react-icons": "^3.7.0",
+    "react-text-loop": "^2.0.2"
   }
 }
