--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "dependencies": {
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
+    "emailjs-com": "^2.4.1",
     "gatsby": "^1.9.153",
     "gatsby-link": "^1.6.34",
+    "gatsby-plugin-env-variables": "^1.0.1",
+    "gatsby-plugin-manifest": "^1.0.27",
     "gatsby-plugin-netlify-cms": "^1.0.0",
+    "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-source-filesystem": "^1.5.11",
@@ -21,6 +25,7 @@
     "node-sass": "^4.12.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-hamburger-menu": "^1.1.1",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-text-loop": "^2.0.2"
   }
